--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <p>
               Schreiben Sie Ihren Brief – wir übernehmen Ausdruck und Postversand an die zuständige Bundestagsabgeordnete/den zuständigen Abgeordneten.
             </p>
-            <a class="cta primary" href="index.html#brief">Brief einreichen</a>
+            <a class="cta primary" href="index-full.html">Brief einreichen</a>
             <!-- Falls diese Seite die neue Startseite wird: den Anker anpassen -->
           </div>
           <div class="card">
@@ -187,6 +187,7 @@
   </script>
 </body>
 </html>
+
 
 
 
